--- a/Rapport/2Appendix/IEC6964.tex
+++ b/Rapport/2Appendix/IEC6964.tex
@@ -48,7 +48,7 @@ For calculating the attenuations of these calculated frequencies the following e
 \va{$\Omega_b$}{equals $\Omega_{high}$}{.}
 \end{where}
 
-A table can then be set up with relative frequencies and attenuations. The calculations of these numbers are done using the function StandardFunction2 in matlab explained in \autoref{app:FIR_Matlab}. A normalized frequency table for the requirements is as seen on \autoref{tb:IEC6964_att_freq}. 
+A table can then be set up with relative frequencies and attenuations. The calculations of these numbers are done using the function StandardFunction2 in matlab. A normalized frequency table for the requirements is as seen on \autoref{tb:IEC6964_att_freq}. 
 
 % Please add the following required packages to your document preamble:
 % \usepackage{multirow}
