--- a/Rapport/2Appendix/SpeakerTESTOneFrequency.tex
+++ b/Rapport/2Appendix/SpeakerTESTOneFrequency.tex
@@ -1,6 +1,6 @@
-\chapter{Speaker single frequency Lab test} \label{app:journal_speaker_test2}
+\chapter{Speaker Single Tone Test} \label{app:journal_speaker_test2}
 
-The purpose of this test is to examine one frequency at different sound levels until the loudspeaker distorts the sound by a significant margin. By only playing at one frequency a high resolution graph of the FFT can be achieved because of the large sample size, to determine if there is a correlation between the key note and the second and third harmonic wave at different sound levels.
+This test examines multiple single tones at different sound pressure levels until the loudspeaker distorts the sound by a significant amount. By only playing at one frequency, a high resolution graph of the frequency response can be achieved because of the large sample size, to determine if there is a correlation between the fundamental frequency and the second and third harmonic wave at different sound levels.
 
 
 \section{Setup}
