--- a/Rapport/1Chapters/2Requirements/Overview.tex
+++ b/Rapport/1Chapters/2Requirements/Overview.tex
@@ -108,7 +108,7 @@ The user will be able to control the graphic equalizer via a GUI.
 The GUI will be based on a C\# program where the user will be able to control the gain in the system's five bands.
 
 \textbf{Graphic equalizer}\\
-The five band graphic equalizer will be user controlled from the GUI. The reasoning behind implementing a five band graphic equalizer also mentioned in \autoref{sec:PreAnalysisCon}, is that the graphic equalizer is easily implemented into the system because of the four band RMS limiter. To implement the equalizer the only thing needed is to implement a variable gain block before the RMS limiter.
+The five band graphic equalizer will be user controlled from the GUI. The reasoning behind implementing a five band graphic equalizer is that the graphic equalizer is easily implemented into the system because of the four band RMS limiter. To implement the equalizer the only thing needed is to implement a variable gain block before the RMS limiter.
 
 \textbf{RMS limiter}\\
 The four octave band RMS limiter, meeting the requirements of IEC 6964 (2001), is based on a RMS detector block in each band which will detect the RMS level. From the RMS level a variable gain, gains based on a threshold of 150 W. 
