--- a/Rapport/1Chapters/4DesignRealization/designRealization.tex
+++ b/Rapport/1Chapters/4DesignRealization/designRealization.tex
@@ -244,7 +244,7 @@ The RMS limiter cannot protect the driver against transients such as kick drums 
 \centering
 \includegraphics[width=0.75\textwidth]{figures/designRealFull.pdf}
 \caption{The complete overall system to be designed.}
-\label{fig:designRealBlock}
+\label{fig:designRealBlockFull}
 \end{figure}
 
 
