--- a/Rapport/figures/LookUp.tex
+++ b/Rapport/figures/LookUp.tex
@@ -18,8 +18,8 @@ xmax=1,
 xmajorgrids,
 ymin=0,
 ymax=2,
-ylabel={Attenuation [.]},
-xlabel={$RMS^2$ [$V^2$]},
+ylabel={Gain [.]},
+xlabel={Steps [.]},
 ymajorgrids,
 axis background/.style={fill=white}
 ]
